2001-11-13  Michael Meeks  <michael@ximian.com>

	* components/tree/nautilus-tree-view.c
	(nautilus_tree_view_destroy): allow double destroys &
	split out
	(nautilus_tree_view_finalize): impl.
	(nautilus_tree_view_class_init): upd.

	* components/text/nautilus-text-view.c
	(nautilus_text_view_class_init): upd.
	(nautilus_text_view_destroy): allow double destroys.
	(nautilus_text_view_finalize): impl.

	* components/music/nautilus-music-view.c
	(nautilus_music_view_class_init): upd.
	(nautilus_music_view_destroy): upd.
	(nautilus_music_view_finalize): impl.

	* components/notes/nautilus-notes.c (do_destroy): don't
	do hacks around the old bonobo.

	* components/adapter/nautilus-adapter.c
	(nautilus_adapter_new): don't gtk_signal_connect_object to a 
	BonoboObject.

2001-11-14  Darin Adler  <darin@bentspoon.com>

	* src/nautilus-main.c: (main): Remove g_log_domain_gruntime.

2001-11-14  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libnautilus-private/nautilus-volume-monitor.c:
	(volume_is_automounted), (mount_volume_deactivate):
	Add detection of automounted volume, don't eject automounted CDROMs.

	* libnautilus-private/nautilus-volume-monitor.c:
	(nautilus_volume_monitor_set_volume_name):
	Fix search for volume to modify.

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* components/history/nautilus-history-view.c:
	* components/notes/nautilus-notes.c:
	* components/sample/nautilus-sample-content-view.c:
	* components/throbber/nautilus-throbber.c:
	Update to use proper boilerplate macros. Other porting tweaks.
	
	* libnautilus/nautilus-view.c: Switch to gnome version of macros
	instead of eel version.

2001-11-12  Michael Meeks  <michael@ximian.com>

	* libnautilus/nautilus-view.c
	(view_frame_call_begin): guard against
	CORBA_OBJECT_NIL return from get_control_frame.

2001-11-12  Thomas Canty  <tommydal@optushome.com.au>
	* configure.in: Initialise the gnome-vfs-module package,
	which is required for the help component
